search results overflow issue fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -119,7 +119,6 @@ html, body {
     text-align: left;
     font-family: sans-serif;
     font-size: 16px;
-    height: 20px;
 }
 
 #searchresults li:hover {
